fix spacing between icon and text in filtered search

--- a/assets/scss/biz-portal.scss
+++ b/assets/scss/biz-portal.scss
@@ -236,6 +236,15 @@ body {
     line-height: 24px;
     font-weight: normal;
     margin: 0;
+    padding-left: 12px;
+  }
+
+  .subtitle-business-directory-category-region {
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: normal;
+    margin: 0;
   }
 
   .business-directory-count-arrow {
